codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__terminal_title_setup_popup_thread_usage.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
expression: terminal_title_popup_snapshot(&mut chat)
---
  Configure Terminal Title
  Select which items to display in the terminal title.

  Type to search

› [x] thread-credits         Estimated current-thread credits (Enterprise workspaces only; omitted …
  [x] estimated-thread-cost  Estimated current-thread cost (Enterprise workspaces only; omitted whe…
  [ ] app-name               Ore app name
  [ ] project-name           Project name (falls back to current directory name)
  [ ] current-dir            Current working directory
  [ ] activity               Spinner while working, action-required message while blocked
  [ ] run-state              Compact session run-state text (Ready, Working, Thinking)
  [ ] thread-name            Current thread name (omitted when unnamed)
↓
  5.2 credits | ~$1.82
  space toggle · ←/→ reorder · enter save · esc cancel
